<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="411dp"
        android:layout_height="728dp"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Account Registration"
            android:textSize="16dp"
            tools:layout_editor_absoluteX="114dp"
            tools:layout_editor_absoluteY="38dp"></TextView>

        <EditText
            android:id="@+id/netIDBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="200dp"
            android:hint="Net ID"
            android:textSize="16dp"
            tools:layout_editor_absoluteX="105dp"
            tools:layout_editor_absoluteY="112dp"></EditText>

        <EditText
            android:id="@+id/emailBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="200dp"
            android:hint="Email"
            android:textSize="16dp"
            tools:layout_editor_absoluteX="105dp"
            tools:layout_editor_absoluteY="186dp"></EditText>

        <Spinner
            android:id="@+id/roleSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:dropDownWidth="200dp"
            tools:layout_editor_absoluteX="19dp"
            tools:layout_editor_absoluteY="275dp">

        </Spinner>

        <Button
            android:id="@+id/registerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Register"
            android:textSize="16dp"
            tools:layout_editor_absoluteX="150dp"
            tools:layout_editor_absoluteY="467dp"></Button>

        <TextView
            android:id="@+id/statusLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="16dp"></TextView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>